@@ -240,6 +240,7 @@
 						--add-opens java.base/java.util=ALL-UNNAMED
 						--add-opens java.base/java.io=ALL-UNNAMED
 						--add-opens java.base/java.net=ALL-UNNAMED
+						-Djava.security.manager=allow
 						-XX:+EnableDynamicAgentLoading
 					</argLine>
 				</configuration>
